--- a/src/scss/blocks/_numbers.scss
+++ b/src/scss/blocks/_numbers.scss
@@ -70,7 +70,7 @@
 .card-numbers__text {
     font-size: 16px;
     line-height: 1.6;
-    text-align: сenter;
+    text-align: center;
 
     @include tablet-small {        
         line-height: 1.2;
